Added node libary fully

--- a/resources/translations/english.json
+++ b/resources/translations/english.json
@@ -1,17 +1,17 @@
 {
-  "math.add": {
+  "doranode:math.add": {
     "title": "Addition",
     "description": "Adds input A to input B."
   },
-  "math.sub": {
+  "doranode:math.sub": {
     "title": "Subtraction",
     "description": "Subtracts input B from input A."
   },
-  "math.div": {
+  "doranode:math.div": {
     "title": "Division",
     "description": "Divides input B from input A."
   },
-  "math.mul": {
+  "doranode:math.mul": {
     "title": "Multiplication",
     "description": "Multiplies input A to input B,"
   }
